# compact-json

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: code-coverage.yml  run-all-tests.yml
src/compact_json/: __init__.py  __main__.py  _cell_widths.py  _compact_json.py  cells.py  formatter.py
tests/: __init__.py  conftest.py  test_console_script.py  test_issues.py  test_json.py  test_simple.py
tests/data/: test-1.ref  test-1.ref-1.json  test-10.json  test-10.ref-1.json  test-10.ref-2.json  test-10.ref-3.json  test-10.ref.2  test-11.json  test-11.ref-1.json  test-11.ref-2.json  test-11.ref-3.json  test-11.ref-4.json  test-11.ref.2  test-11.ref.3  test-12.json  test-12.ref-1.json  test-12.ref-2.json  test-12.ref-3.json  test-12.ref-4.json  test-12.ref.1  test-12.ref.2  test-12.ref.3  test-13.json  test-13.ref-1.json  test-13.ref-2.json  test-13.ref.1  test-13.ref.2  test-14.json  test-14.ref-1.json  test-14.ref-2.json  test-14.ref.1  test-15.json  test-15.ref-1.json  test-15.ref-2.json  test-15.ref.2  test-16.json  test-16.ref-1.json  test-2.json  test-2.ref-1.json  test-2.ref-2.json  (+52 more)
