[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A JSON formatter that produces compact but human-readable"
documentation = "https://github.com/masaccio/compact-json/blob/main/README.md"
license = "MIT"
name = "compact-json"
packages = [{include = "compact_json", from = "src"}]
readme = "README.md"
repository = "https://github.com/masaccio/compact-json"
version = "1.3.1"

[tool.poetry.dependencies]
python = "^3.8"
wcwidth = "^0.2.5"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", allow-prereleases = true}
pylama = "^8.4.1"
pytest-check = "^1.3.0"
pytest-console-scripts = "^1.3.1"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
compact-json = "compact_json._compact_json:main"

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "--cov=src/compact_json"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py38, py39, py310, py311
[testenv]
allowlist_externals = poetry
commands_pre = poetry install --no-root --sync
commands = poetry run -vvv pytest --import-mode importlib
"""

# linter settings
[tool.pylama]
linters = "pylint,mccabe,pyflakes"
max_line_length = 100

[tool.pylama.linter.pycodestyle]
format = "pylint"
ignore = "E203,E231,W503"

[tool.pylama.linter.mccabe]
max-complexity = 15

[tool.pylama.linter.pyflakes]
builtins = "_"
